# trading-platform-app

./: .env.example  .gitignore  pyproject.toml
src/: __init__.py  __main__.py
src/apps/trading_platform/: admin.py  apps.py  models.py  tasks.py
src/apps/trading_platform/adapters/: access_trade_provider.py  bs4_data_scraper.py  element_handler.py  main.py  request_request_sender.py  stock_monitor_data_updater.py  stock_monitor_req_sender.py  stock_monitor_request_sender.py  stock_strategy_usecase.py  urlpatterns.py
src/apps/trading_platform/indicators/: indicator_calculator.py  indicator_enum.py  indicators.py
src/apps/trading_platform/interfaces/: access_trade_provider.py  base_stocks_strategy_use_case.py  data_scraper.py  i_stock_data_repository.py  i_stock_monitor_data_updater.py  request_sender.py  stock_data_repository.py  stock_monitor_data_updater.py  stocks_scraper.py
src/apps/trading_platform/migrations/: 0001_initial.py  0002_apikey_remove_dealsettings_indicator_settings_and_more.py  0003_alter_apikey_options.py  0004_alter_apikey_options.py  0005_stock.py  0006_remove_indicatorsetting_indicator_and_more.py  0007_stockmonitorconfiguration.py  0008_alter_stockmonitorconfiguration_email_and_more.py  0009_stockmonitorconfiguration_long_strategy_payload_and_more.py  0010_alter_stockmonitorconfiguration_options_and_more.py  0011_alter_stockmonitorconfiguration_email.py  0012_alter_apikey_api_key_alter_apikey_api_secret_and_more.py
src/apps/trading_platform/repositories/: django_orm_deal_repository.py  i_deal_repository.py  (+2 more)
src/core/: celery.py  ioc.py  settings.py  urls.py  wsgi.py
src/main/: deals.py  test.py
src/main/indicators/: indicator_calculator.py  indicator_enum.py  indicators.py
tests/: gth.py  t1.py  test.py  test_submit.py
(+20 files in other folders)
